--- a/1_Explore_Notebooks_magic_commands.ipynb
+++ b/1_Explore_Notebooks_magic_commands.ipynb
@@ -16,28 +16,11 @@
     }
    },
    "source": [
-    "#Welcome to Inceptez Technologies \n",
+    "#Welcome to Inceptez Technologies\n",
     "Let us understand about creating notebooks & magical commands\n",
     "https://fplogoimages.withfloats.com/actual/68009c3a43430aff8a30419d.png\n",
     "![](https://fplogoimages.withfloats.com/actual/68009c3a43430aff8a30419d.png)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "c2b45f67-f92a-4e4a-aad5-d8f884a6799c",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -55,14 +38,14 @@
     }
    },
    "source": [
-    "###Let us learn first about Magical Commands\n",
+    "##Let us learn first about Magical Commands\n",
     "**Important Magic Commands**\n",
+    "- %md: allows you to write markdown text to design the notebook.\n",
     "- %run: runs a Python file or a notebook.\n",
-    "- %sh: executes shell commands on the cluster nodes.\n",
-    "- %fs: allows you to interact with the Databricks file system.\n",
+    "- %sh: executes shell commands on the cluster edge/client node.\n",
+    "- %fs: allows you to interact with the Databricks file system (Datalake command (cloud storage s3/adls/gcs))\n",
     "- %sql: allows you to run Spark SQL/HQL queries.\n",
     "- %python: switches the notebook context to Python.\n",
-    "- %md: allows you to write markdown text.\n",
     "- %pip: allows you to install Python packages.\n",
     "\n",
     "**Not Important Magic Commands or We learn few of these where we have Cloud(Azure) dependency**\n",
@@ -111,8 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "%run\n",
-    "\"/Workspace/Users/infoblisstech@gmail.com/databricks-code-repo/databricks_workouts_2025/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/4_child_notebook\""
+    "%run \"/Workspace/Users/infoblisstech@gmail.com/databricks-code-repo/databricks_workouts_2025/1_DATABRICKS_NOTEBOOK_FUNDAMENTALS/4_child_notebook\""
    ]
   },
   {
@@ -153,7 +135,25 @@
    "outputs": [],
    "source": [
     "%sh\n",
-    "ls /databricks-datasets"
+    "ls -l /databricks-datasets/airlines\n",
+    "head -1 /databricks-datasets/airlines/part-01902"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "85ffa4e3-dc14-4ea4-bab4-94151bc22f9d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "We are going to use Databricks Unity Catalog (We don't know about it yet)\n",
+    "to create tables and files under the volume (catalog/schema/volume/folder/files)"
    ]
   },
   {
@@ -161,7 +161,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "85719c48-7508-45d6-b879-d5ab1e956bcc",
      "showTitle": false,
@@ -172,7 +176,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "CREATE VOLUME IF NOT EXISTS workspace.default.volume1;"
+    "CREATE VOLUME IF NOT EXISTS workspace.default.volumewe47_datalake;"
    ]
   },
   {
@@ -191,7 +195,7 @@
     }
    },
    "source": [
-    "####How to run a DBFS (Hadoop) FS commands inside a notebook using %fs magic command <br> upload some sample data into the created volume"
+    "####Upload some sample data going into (Catalog -> My Organization -> Workspace -> Default -> Volumes) <br> How to run a DBFS (like Hadoop) FS commands inside a notebook using %fs magic command to copy the uploaded data into some other volume from the uploaded volume"
    ]
   },
   {
@@ -204,7 +208,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "e286ceb9-8f13-47d1-861b-f99b4e1e59b6",
+     "nuid": "6947aa56-af9f-42de-8262-b7bc680203f7",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -212,8 +216,68 @@
    },
    "outputs": [],
    "source": [
-    "dbutils.fs.cp(\n",
-    "    \"/Volumes/workspace/default/volume1/sample_data.csv\",\"/Volumes/workspace/default/volume1/sample_data1.csv\")"
+    "%fs ls \"dbfs:///Volumes/workspace/default/volumewe47_datalake\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e68958aa-a396-4a19-b4e5-3541c3d5d756",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%fs cp \"dbfs:/Volumes/workspace/default/volumewe47_datalake/patients.csv\" \"dbfs:/Volumes/workspace/default/volumewe47_datalake/patients_copy.csv\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "0a8e80b8-4546-468b-87ed-7bb6012c1a7b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "Learning for the first time the dbutils, we learn in detail later\n",
+    "Rather using fs command, we can use databricks utility command (comprehensive) to copy the data/any other filesystem operations in the DBFS"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f29a64d1-087b-46f7-8e97-63c38991fd40",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "dbutils.fs.cp(\"dbfs:/Volumes/workspace/default/volumewe47_datalake/patients.csv\",\"dbfs:/Volumes/workspace/default/volumewe47_datalake/patients_copy2.csv\")\n",
+    "dbutils.fs.rm(\"dbfs:/Volumes/workspace/default/volumewe47_datalake/patients_copy.csv\")"
    ]
   },
   {
@@ -255,8 +319,31 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "create table if not exists cities(id int,city string);\n",
-    "insert into cities values(3,'Mumbai'),(4,'Lucknow');"
+    "create table if not exists default.cities2(id int,city string);\n",
+    "insert into default.cities2 values(3,'Mumbai'),(4,'Lucknow');\n",
+    "select * from cities2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "610c68dd-c905-4abc-9f33-ad5623ba4dcb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%python\n",
+    "spark.sql(\"select * from cities2\").explain(True)"
    ]
   },
   {
@@ -279,7 +366,30 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "update cities set city='Kolkata' where id=4;"
+    "update cities1 set city='Kolkata' where id=4;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2cdb43f7-2838-42d6-a19b-60d2377d1812",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "show create table cities1;"
    ]
   },
   {
@@ -302,30 +412,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "from cities select *;"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "76e4105c-4831-4fc5-a24a-d4bf5ebe9e42",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "%sql\n",
-    "show create table default.cities;"
+    "from cities1 select *;"
    ]
   },
   {
@@ -391,26 +478,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
+     "cellMetadata": {},
      "inputWidgets": {},
-     "nuid": "5f63c0dd-51cb-4c14-8dc3-f55ab0ec9009",
+     "nuid": "bb77dbe6-2686-4f10-9781-6e37357e121e",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
-   "outputs": [],
    "source": [
-    "%python\n",
-    "df1=spark.read.csv(\"/Volumes/workspace/default/volume1/sample_data.csv\")\n",
-    "display(df1)"
+    "In the python magic cell itself, we already have spark session object instantiated, <br>\n",
+    "so we can lavishly write spark programs"
    ]
   },
   {
@@ -429,7 +510,7 @@
     }
    },
    "source": [
-    "######How to install additional libraries in this current Python Interpreter using %pip magic command"
+    "####How to install additional libraries in this current Python Interpreter using %pip magic command"
    ]
   },
   {
@@ -469,7 +550,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 7602863414470792,
+     "commandId": 6631791723001833,
      "dataframes": [
       "_sqldf"
      ]
