--- a/2_Usecase_md_dbutils_widgets.ipynb
+++ b/2_Usecase_md_dbutils_widgets.ipynb
@@ -123,7 +123,11 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6a6fbdfb-0a62-46c7-a639-02474c550929",
      "showTitle": false,
@@ -132,7 +136,37 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "%sql\n",
+    "Create volume if not exists workspace.default.volumewd36;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c439e46a-8874-4045-be5d-0f61bcb15695",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "base_path = \"/Volumes/workspace/default/volumewd36\"\n",
+    "raw_path = f\"{base_path}/raw\"\n",
+    "processed_path = f\"{base_path}/processed\"\n",
+    "archive_path = f\"{base_path}/archive\"\n",
+    "print(\"base_path :\", base_path)\n",
+    "print(\"raw_path :\", raw_path)\n",
+    "print(\"processed_path :\", processed_path)   "
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,9 +189,55 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0d397356-1c43-4fdc-9190-d00eb33c0338",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#dbutils.fs.ls(base_path)\n",
+    "#dbutils.fs.ls(raw_path)\n",
+    "#dbutils.fs.ls(processed_path)\n",
+    "#dbutils.fs.ls(archive_path)\n",
+    "print(\"base_path :\", base_path)\n",
+    "print(\"raw_path :\", raw_path)\n",
+    "print(\"processed_path :\", processed_path)   \n",
+    "def folder_exist(path):\n",
+    "  try:\n",
+    "    dbutils.fs.ls(path)  \n",
+    "    return True\n",
+    "  except: \n",
+    "      return False\n",
+    "  \n",
+    "if not folder_exist(base_path):\n",
+    "      dbutils.fs.mkdirs(base_path)\n",
+    "\n",
+    "if not folder_exist(processed_path):\n",
+    "      dbutils.fs.mkdirs(processed_path)\n",
+    "\n",
+    "if not folder_exist(archive_path):\n",
+    "      dbutils.fs.mkdirs(archive_path)\n",
+    "    \n",
+    "if not folder_exist(raw_path):\n",
+    "      dbutils.fs.mkdirs(raw_path)\n",
+    "          \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "96a14097-6dd5-4d72-ad1e-f33a2f9f238f",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -193,7 +273,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "80f89788-6f61-4a6c-ab53-e6a07c323c03",
      "showTitle": false,
@@ -202,7 +285,15 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "Sample_Healthcare_data = \"\"\"patient_id,patient_name,age,gender\n",
+    "1,John Doe,68,M\n",
+    "Jane Smith,54,F\n",
+    "\"\"\"\n",
+    "dbutils.fs.put(f\"{raw_path}/Sample_Healthcare_data.csv\",Sample_Healthcare_data,True)\n",
+    "dbutils.fs.ls(raw_path)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -227,7 +318,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1fde88db-8cf8-4795-8733-b9e7a64f3751",
      "showTitle": false,
@@ -236,7 +330,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.fs.ls(raw_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -259,7 +355,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "db57a210-0d54-4cb1-91b1-445f4bb05101",
      "showTitle": false,
@@ -268,7 +367,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.fs.cp(f\"{raw_path}/Sample_Healthcare_data.csv\",f\"{processed_path}/Sample_Healthcare_data.csv\",recurse=True)\n",
+    "dbutils.fs.ls(processed_path)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -294,7 +396,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ba2d9ddd-c9cf-4ac0-b09b-5b509b3c686e",
      "showTitle": false,
@@ -303,7 +408,10 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "dbutils.widgets.dropdown(\"drop_down_widget\",\"Balaji\",[\"Balaji\",\"Vasanth\",\"Bala\"],\"Select your name\");\n",
+    "dbutils.widgets.text(\"text_widget\",\"Balaji\",\"Enter your name\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,10 +556,79 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 6580578421872306,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "2_Usecase_md_dbutils_widgets",
-   "widgets": {}
+   "widgets": {
+    "drop_down_widget": {
+     "currentValue": "Balaji",
+     "nuid": "442005f1-1a5a-42cc-9438-151959fb7ff5",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "Balaji",
+      "label": "Select your name",
+      "name": "drop_down_widget",
+      "options": {
+       "widgetDisplayType": "Dropdown",
+       "choices": [
+        "Balaji",
+        "Vasanth",
+        "Bala"
+       ],
+       "fixedDomain": true,
+       "multiselect": false
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "dropdown",
+      "defaultValue": "Balaji",
+      "label": "Select your name",
+      "name": "drop_down_widget",
+      "options": {
+       "widgetType": "dropdown",
+       "autoCreated": null,
+       "choices": [
+        "Balaji",
+        "Vasanth",
+        "Bala"
+       ]
+      }
+     }
+    },
+    "text_widget": {
+     "currentValue": "Balaji",
+     "nuid": "fc45e61f-e0c0-4aab-b852-57b9343bd8ec",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "Balaji",
+      "label": "Enter your name",
+      "name": "text_widget",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "Balaji",
+      "label": "Enter your name",
+      "name": "text_widget",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": false,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
